#57 all basic template engine features work with kotlin